@@ -18,22 +18,17 @@ package software.xdev.caching.scheduledexecutorservice;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
-import java.util.concurrent.atomic.AtomicInteger;
 
 
 public final class DefaultCreator
 {
 	public static ScheduledExecutorService create()
 	{
-		final AtomicInteger counter = new AtomicInteger(0);
 		final ScheduledExecutorService scheduledExecutorService = Executors.newScheduledThreadPool(
 			1,
-			r -> {
-				final Thread thread = new Thread(r);
-				thread.setName("ELC-Cleanup-" + counter.getAndIncrement());
-				thread.setDaemon(true);
-				return thread;
-			});
+			Thread.ofVirtual()
+				.name("ELC-Cleanup-", 0)
+				.factory());
 		if(scheduledExecutorService instanceof final ScheduledThreadPoolExecutor scheduledThreadPoolExecutor)
 		{
 			scheduledThreadPoolExecutor.setRemoveOnCancelPolicy(true);
